Switch to the new Firewire stack in 2011 by blacklisting the legacy stack

--- a/system/base/module-init-tools/files/blacklist/blacklist-firewire.conf
+++ b/system/base/module-init-tools/files/blacklist/blacklist-firewire.conf
@@ -1,10 +1,14 @@
-# Select the legacy firewire stack over the new CONFIG_FIREWIRE one.
+# Blacklist the old firewire stack as it's unmaintained
+# See https://ieee1394.wiki.kernel.org/index.php/Juju_Migration
 
-#blacklist ohci1394
-#blacklist sbp2
-#blacklist dv1394
-#blacklist raw1394
-#blacklist video1394
+blacklist sbp2
+blacklist dv1394
+blacklist raw1394
+blacklist eth1394
+blacklist ohci1394
+blacklist video1394
 
-blacklist firewire-ohci
-blacklist firewire-sbp2
+# These are coming from the new default stack (CONFIG_FIREWIRE)
+#blacklist firewire-ohci
+#blacklist firewire-sbp2
+#blacklist firewire-net
