--- a/desktop/font/droid-fonts/files/65-droid-fonts-sans-fontconfig.conf
+++ b/desktop/font/droid-fonts/files/65-droid-fonts-sans-fontconfig.conf
@@ -6,10 +6,59 @@
       <string>Droid Sans</string>
     </test>
     <edit name="fontversion">
-      <int>3</int>
+      <int>7</int>
     </edit>
   </match>
   <match target="scan">
+    <test name="family">
+      <string>Droid Sans Hebrew</string>
+    </test>
+    <edit name="family">
+      <string>Droid Sans</string>
+    </edit>
+    <edit name="fullname">
+      <string>Droid Sans</string>
+    </edit>
+    <edit name="fontversion">
+      <int>6</int>
+    </edit>
+  </match>
+  <match target="scan">
+    <test name="family">
+      <string>Droid Sans Arabic</string>
+    </test>
+    <edit name="family">
+      <string>Droid Sans</string>
+    </edit>
+    <edit name="fullname">
+      <string>Droid Sans</string>
+    </edit>
+    <edit name="fontversion">
+      <int>5</int>
+    </edit>
+  </match>
+  <match target="scan">
+    <test name="family">
+      <string>Droid Sans Thai</string>
+    </test>
+    <edit name="family">
+      <string>Droid Sans</string>
+    </edit>
+    <edit name="fullname">
+      <string>Droid Sans</string>
+    </edit>
+    <edit name="fontversion">
+      <int>4</int>
+    </edit>
+  </match>
+  <match target="scan">
+    <test name="lang" compare="not_eq">
+      <string>zh-cn</string>
+      <string>zh-sg</string>
+      <string>zh-hk</string>
+      <string>zh-tw</string>
+      <string>zh</string>
+    </test>
     <test name="family">
       <string>Droid Sans Japanese</string>
     </test>
@@ -20,7 +69,7 @@
       <string>Droid Sans</string>
     </edit>
     <edit name="fontversion">
-      <int>2</int>
+      <int>3</int>
     </edit>
   </match>
   <match target="scan">
@@ -34,11 +83,50 @@
       <string>Droid Sans</string>
     </edit>
     <edit name="fontversion">
+      <int>2</int>
+    </edit>
+  </match>
+  <match target="scan">
+    <test name="lang">
+      <string>zh-cn</string>
+      <string>zh-sg</string>
+      <string>zh-hk</string>
+      <string>zh-tw</string>
+      <string>zh</string>
+    </test>
+    <test name="family">
+      <string>Droid Sans Japanese</string>
+    </test>
+    <edit name="family">
+      <string>Droid Sans</string>
+    </edit>
+    <edit name="fullname">
+      <string>Droid Sans</string>
+    </edit>
+    <edit name="fontversion">
       <int>1</int>
     </edit>
   </match>
   <alias binding="same">
+    <family>Droid Sans Arabic</family>
+    <accept>
+      <family>Droid Sans</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>Droid Sans Hebrew</family>
+    <accept>
+      <family>Droid Sans</family>
+    </accept>
+  </alias>
+  <alias binding="same">
     <family>Droid Sans Japanese</family>
+    <accept>
+      <family>Droid Sans</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>Droid Sans Thai</family>
     <accept>
       <family>Droid Sans</family>
     </accept>
