Remove -qt4 suffices. Totally.

--- a/desktop/toolkit/qt/qt/files/data/assistant.desktop
+++ b/desktop/toolkit/qt/qt/files/data/assistant.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Exec=assistant-qt4
+Exec=assistant
 Name=Qt4 Assistant
 Name[af]=Qt4 Assistent
 Name[ar]=معاون Qt4
@@ -130,7 +130,7 @@ GenericName[zh_CN]=文档浏览器
 GenericName[zh_TW]=文件閱讀器
 GenericName[zu]=Umcingi Woshicilelo
 X-KDE-StartupNotify=true
-Icon=assistant-qt4
+Icon=assistant
 Terminal=false
 Type=Application
 Categories=Qt;Development;
