--- a/desktop/toolkit/qt/qt/files/data/designer.desktop
+++ b/desktop/toolkit/qt/qt/files/data/designer.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Exec=designer-qt4
+Exec=designer
 Name=Qt4 Designer
 Name[af]=Qt4 Ontwerper
 Name[ar]=مصمم Qt4
@@ -126,7 +126,7 @@ GenericName[zh_TW]=界面設計師
 GenericName[zu]=Umakhi Womxhumanisi
 X-KDE-StartupNotify=true
 MimeType=application/x-designer;
-Icon=designer-qt4
+Icon=designer
 Terminal=false
 Type=Application
 Categories=Qt;Development;
