--- a/desktop/toolkit/qt/qt/files/data/linguist.desktop
+++ b/desktop/toolkit/qt/qt/files/data/linguist.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Exec=linguist-qt4
+Exec=linguist
 Name=Qt4 Linguist
 Name[ar]=لغوي Qt4
 Name[bn]=কিউ-টি লিঙ্গুইস্ট
@@ -124,5 +124,5 @@ X-KDE-StartupNotify=true
 MimeType=application/x-linguist;
 Terminal=false
 Type=Application
-Icon=linguist-qt4
+Icon=linguist
 Categories=Qt;Development;
