Fix modprobe config

--- a/kernel/default/drivers/module-nvidia-current/files/modprobe.conf
+++ b/kernel/default/drivers/module-nvidia-current/files/modprobe.conf
@@ -1,1 +1,1 @@
-install nvidia-current /bin/grep -qw "^nouveau" /proc/modules || /sbin/modprobe -bi nvidia-current $CMDLINE_OPTS && false
+install nvidia-current if /bin/grep -qw "^nouveau" /proc/modules; then /bin/false; else /sbin/modprobe -bi nvidia-current $CMDLINE_OPTS; fi
