Remove busybox parts as it is a seperate package now Adapt to new busybox path Change package style and version to be standalone mkinitramfs

--- a/system/base/mkinitramfs/files/initramfs.conf
+++ b/system/base/mkinitramfs/files/initramfs.conf
@@ -6,6 +6,10 @@
 # calling /sbin/mdadm if it exists
 # raid=1
 
+# Set to 1 to enable probing lvm modules and
+# calling /sbin/lvm if it exists
+# lvm=1
+
 # Set to 1 to mount rootfs over NFS
 # thin=0
 
