Another cosmetic change

--- a/x11/misc/xkeyboard-config/files/10-keyboard.conf
+++ b/x11/misc/xkeyboard-config/files/10-keyboard.conf
@@ -2,8 +2,9 @@ Section "InputClass"
     Identifier      "Keyboard Options"
     MatchIsKeyboard "on"
 
-    #Option          "XkbModel"      "evdev"
-    #Option          "XkbOptions"    "ctrl:nocaps,kpdl:dot,terminate:ctrl_alt_bksp"
-    #Option          "XkbLayout"     "tr"
-    #Option          "XkbVariant"    "f"
+    #Option          "xkb_rules"     "evdev"
+    #Option          "xkb_model"     "evdev"
+    #Option          "xkb_options"   "ctrl:nocaps,kpdl:dot,terminate:ctrl_alt_bksp"
+    #Option          "xkb_layout"    "tr"
+    #Option          "xkb_variant"   "f"
 EndSection
