Fix desktop icon, rename desktop name to "Chromium Browser"

--- a/network/web/chromium-browser/files/chromium-browser.desktop
+++ b/network/web/chromium-browser/files/chromium-browser.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
-Name=Chromium
+Name=Chromium Browser
 GenericName=Web Browser
 GenericName[ar]=متصفح الشبكة
 GenericName[bg]=Уеб браузър
@@ -104,9 +104,9 @@ Comment[zh_HK]=連線到網際網路
 Comment[zh_TW]=連線到網際網路
 Exec=chromium-browser --enable-plugins --enable-extensions --enable-user-scripts --enable-printing --enable-sync --auto-ssl-client-auth %U
 Terminal=false
-Icon=chromium
+Icon=chromium-browser
 Type=Application
-Categories=Application;Network;WebBrowser;
+Categories=Application;Network
 MimeType=text/html;text/xml;application/xhtml_xml;
 StartupWMClass=Chromium
 StartupNotify=true
