--- a/network/web/chromium-browser/files/chromium-browser.desktop
+++ b/network/web/chromium-browser/files/chromium-browser.desktop
@@ -106,7 +106,7 @@ Exec=chromium-browser --enable-plugins --enable-extensions --enable-user-scripts
 Terminal=false
 Icon=chromium-browser
 Type=Application
-Categories=Application;Network
+Categories=Application;Network;
 MimeType=text/html;text/xml;application/xhtml_xml;
 StartupWMClass=Chromium
 StartupNotify=true
