--- a/kernel/default/drivers/module-nvidia-current/files/modprobe.conf
+++ b/kernel/default/drivers/module-nvidia-current/files/modprobe.conf
@@ -1,1 +1,2 @@
-install nvidia-current if /bin/grep -qw "^nouveau" /proc/modules; then /bin/false; else /sbin/modprobe -bi nvidia-current $CMDLINE_OPTS; fi
+blacklist nvidia-current
+install nvidia-current if /bin/grep -qw "^nouveau" /proc/modules; then /bin/false; else /sbin/modprobe -i nvidia-current $CMDLINE_OPTS; fi
