--- a/kernel/default/drivers/module-nvidia173/files/modprobe.conf
+++ b/kernel/default/drivers/module-nvidia173/files/modprobe.conf
@@ -2,7 +2,7 @@
 blacklist nvidia173
 
 # Fail if nouveau loaded
-install nvidia173 if grep -qw "^nouveau" /proc/modules; then false; else /sbin/modprobe -i nvidia173 $CMDLINE_OPTS; fi
+install nvidia173 if /bin/grep -qw "^nouveau" /proc/modules; then /bin/false; else /sbin/modprobe -i nvidia173 $CMDLINE_OPTS; fi
 
 # Load the right module when requested with the name "nvidia"
-install nvidia M=$(readlink /etc/alternatives/libGL | cut -d/ -f4 | grep nvidia) && /sbin/modprobe $M $CMDLINE_OPTS
+install nvidia M=$(/bin/readlink /etc/alternatives/libGL | /usr/bin/cut -d/ -f4 | /bin/grep nvidia) && /sbin/modprobe $M $CMDLINE_OPTS
