Use full paths in modprobe rules

--- a/kernel/default/drivers/module-nvidia-current/files/modprobe.conf
+++ b/kernel/default/drivers/module-nvidia-current/files/modprobe.conf
@@ -2,7 +2,7 @@
 blacklist nvidia-current
 
 # Fail if nouveau loaded
-install nvidia-current if grep -qw "^nouveau" /proc/modules; then false; else /sbin/modprobe -i nvidia-current $CMDLINE_OPTS; fi
+install nvidia-current if /bin/grep -qw "^nouveau" /proc/modules; then /bin/false; else /sbin/modprobe -i nvidia-current $CMDLINE_OPTS; fi
 
 # Load the right module when requested with the name "nvidia"
-install nvidia M=$(readlink /etc/alternatives/libGL | cut -d/ -f4 | grep nvidia) && /sbin/modprobe $M $CMDLINE_OPTS
+install nvidia M=$(/bin/readlink /etc/alternatives/libGL | /usr/bin/cut -d/ -f4 | /bin/grep nvidia) && /sbin/modprobe $M $CMDLINE_OPTS
