New patches and modifications for compability with the newest Xorg

--- a/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
+++ b/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
@@ -5,6 +5,6 @@ Name=NVIDIA X Server Settings
 Name[tr]=NVIDIA X Sunucu Ayarları
 Comment=Configure NVIDIA X Server Settings
 Comment[tr]=NVIDIA X Sunucu Ayarlarını Yapılandır
-Exec=nvidia-settings
+Exec=xdg-su -c nvidia-settings
 Icon=nvidia-settings
 Categories=Application;System;
