Add a new option to indicate Plymouth transition support

--- a/system/installer/yali/files/yali.desktop
+++ b/system/installer/yali/files/yali.desktop
@@ -2,6 +2,7 @@
 Exec=/usr/bin/start-yali
 Type=Application
 NoDisplay=true
+X-Pardus-PlymouthTransition=true
 X-Pardus-XCursorTheme=Oxygen_White
 
 Name=YALI
