--- a/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
+++ b/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
@@ -8,3 +8,4 @@ Comment[tr]=NVIDIA X Sunucu Ayarlarını Yapılandır
 Exec=xdg-su -c nvidia-settings
 Icon=nvidia-settings
 Categories=Application;System;
+#Hidden[$e]=$(if xdpyinfo | grep -wq NV-CONTROL; then echo "false"; else echo "true"; fi)
