Move menu items from System menu to Settings menu

--- a/kernel/default/drivers/module-fglrx/files/amdcccle.desktop
+++ b/kernel/default/drivers/module-fglrx/files/amdcccle.desktop
@@ -7,7 +7,7 @@ GenericName[de]=ATI Grafics Adapter Settings
 GenericName[tr]=ATI Grafik Bağdaştırıcı Ayarları
 Icon=amdcccle
 Exec=LC_ALL=C amdcccle
-Categories=System;
+Categories=Settings;
 Type=Application
 StartupNotify=false
 TryExec=/sys/module/fglrx
