--- a/kernel/default/drivers/module-fglrx/files/amdccclesu.desktop
+++ b/kernel/default/drivers/module-fglrx/files/amdccclesu.desktop
@@ -5,7 +5,7 @@ GenericName=ATI Graphics Adapter Settings (Super User Mode)
 GenericName[tr]=ATI Grafik Bağdaştırıcı Ayarları (Yetkili Kullanıcı Kipi)
 Icon=amdcccle
 Exec=LC_ALL=C xdg-su -c amdcccle
-Categories=System;
+Categories=Settings;
 Type=Application
 StartupNotify=false
 TryExec=/sys/module/fglrx
