Use Settings menu instead of System menu

--- a/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
+++ b/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
@@ -7,5 +7,5 @@ Comment=Configure NVIDIA X Server Settings
 Comment[tr]=NVIDIA X Sunucu Ayarlarını Yapılandır
 Exec=xdg-su -c nvidia-settings
 Icon=nvidia-settings
-Categories=Application;System;
+Categories=Settings;
 #Hidden[$e]=$(if xdpyinfo | grep -wq NV-CONTROL; then echo "false"; else echo "true"; fi)
