Hide menu items when nouveau is not loaded

--- a/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
+++ b/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
@@ -8,4 +8,5 @@ Comment[tr]=NVIDIA X Sunucu Ayarlarını Yapılandır
 Exec=xdg-su -c nvidia-settings
 Icon=nvidia-settings
 Categories=Settings;
+TryExec=/sys/module/nouveau
 #Hidden[$e]=$(if xdpyinfo | grep -wq NV-CONTROL; then echo "false"; else echo "true"; fi)
