Update systemd service file from fedora

--- a/hardware/misc/gpm/files/fedora/gpm.service
+++ b/hardware/misc/gpm/files/fedora/gpm.service
@@ -7,8 +7,10 @@ After=syslog.target
 # to add socket activation here.
 
 [Service]
-ExecStart=/usr/sbin/gpm -m /dev/input/mice -t exps2 -D
+ExecStart=/usr/sbin/gpm -m /dev/input/mice -t exps2
 StandardOutput=syslog
+Type=forking
+PIDFile=/var/run/gpm.pid
 
 [Install]
 WantedBy=multi-user.target
