All options are enabled by default, don't need this option strings anymore.

--- a/network/web/chromium-browser/files/chromium-browser.desktop
+++ b/network/web/chromium-browser/files/chromium-browser.desktop
@@ -102,7 +102,7 @@ Comment[vi]=Truy cập Internet
 Comment[zh_CN]=访问互联网
 Comment[zh_HK]=連線到網際網路
 Comment[zh_TW]=連線到網際網路
-Exec=chromium-browser --enable-plugins --enable-extensions --enable-user-scripts --enable-printing --enable-sync --auto-ssl-client-auth %U
+Exec=chromium-browser %U
 Terminal=false
 Icon=chromium-browser
 Type=Application
