--- a/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
+++ b/hardware/graphics/nvidia-settings/files/nvidia-settings.desktop
@@ -5,7 +5,7 @@ Name=NVIDIA X Server Settings
 Name[tr]=NVIDIA X Sunucu Ayarları
 Comment=Configure NVIDIA X Server Settings
 Comment[tr]=NVIDIA X Sunucu Ayarlarını Yapılandır
-Exec=xdg-su -c nvidia-settings
+Exec=xdg-su -c "LD_PRELOAD=/usr/lib/libstdc++.so nvidia-settings"
 Icon=nvidia-settings
 Categories=Settings;
 TryExec=/sys/module/nvidia
