Bring packages own icon and use it, fixes bug #15822
BUG:FIXED:15822

--- a/game/action/project-starfighter/files/project-starfighter.desktop
+++ b/game/action/project-starfighter/files/project-starfighter.desktop
@@ -6,7 +6,7 @@ Name=Project Starfighter
 Name[tr]=Project Starfighter
 GenericName=Space Battle
 GenericName[tr]=Uzay Savaşı
-Icon=cache
+Icon=project-starfighter
 Exec=starfighter
 Terminal=false
 StartupNotify=false
